# openposterdb

./: .containerignore  Caddyfile.example  Cargo.toml  Containerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: release.yml  test.yml
api/: .env.example  .gitignore  Cargo.toml
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/cache/: mod.rs
api/src/entity/: api_key_settings.rs  available_ratings.rs  image_meta.rs  mod.rs  poster_meta.rs
api/src/handlers/: admin.rs  api_keys.rs  auth.rs  image.rs  mod.rs  preview.rs
api/src/id/: mod.rs
api/src/image/: badge.rs  generate.rs  icons.rs  mod.rs  serve.rs
api/src/poster/: badge.rs  generate.rs  mod.rs  serve.rs
api/src/routes/: admin.rs  api_keys.rs  app.rs  auth.rs  image.rs  mod.rs  poster.rs  preview.rs
api/src/services/: db.rs  fanart.rs  lang.rs  mdblist.rs  mod.rs  omdb.rs  ratings.rs  tmdb.rs  validation.rs
api/src/upgrade/: mod.rs  v001_backdrop_cache_keys.rs  v002_backdrop_position_direction_cache.rs  v003_ratings_enabled_flags.rs
api/tests/: admin.rs  api_key_self.rs  api_keys.rs  auth_flow.rs  cdn_redirects.rs  db_operations.rs  e2e_settings.rs  external_cache_only.rs  free_api_key.rs  is_valid.rs  logo_backdrop.rs  middleware.rs  preview.rs  query_overrides.rs  security.rs  upgrade.rs
api/tests/common/: mod.rs
scripts/: IMDB-LICENSE  README.md  regenerate-examples.sh  release.sh  seed.sh  test.sh  visual-report.sh
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite-plugin-image-utils.ts  vite-plugin-optimize-examples.ts  vite-plugin-placeholders.ts  vite.config.ts
web/e2e/: api-keys.spec.ts  backdrops.spec.ts  dashboard.spec.ts  docs.spec.ts  free-api-key.spec.ts  global-setup.ts  global-teardown.ts  helpers.ts  key-auth-api.spec.ts  key-login.spec.ts  key-settings.spec.ts  live-api.spec.ts  login-flow.spec.ts  logos.spec.ts  not-found.spec.ts  posters.spec.ts  settings.spec.ts  setup-flow.spec.ts
web/public/: robots.txt  site.webmanifest
web/src/: main.ts
web/src/__tests__/: App.spec.ts  stubs.ts
(+50 files in other folders)
