[package]
name = "openposterdb-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "query"] }
image = "0.25.9"
imageproc = "0.26.1"
ab_glyph = "0.2.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
thiserror = "2.0.18"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
